--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,1 +1,11 @@
-<p>education works!</p>
+<ul *ngFor="let edu of education;">
+<li>
+              <b>Education:</b> <br>
+	        High School:<br>
+                {{ edu.highSchool }} <br>
+		University:<br>
+		{{ edu.university}} <br>
+        </li>
+
+</ul>
+
