--- a/src/app/interests/interests.component.html
+++ b/src/app/interests/interests.component.html
@@ -1,1 +1,8 @@
-<p>interests works!</p>
+<ul *ngFor="let inter of interests;">
+        <li>
+	        <b>Interests Work:</b> <br>
+                {{ inter.work }} <br>
+                
+        </li>
+
+</ul>
