--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,1 +1,10 @@
-<p>skills works!</p>
+<ul *ngFor="let sk of skills;">
+        <li>
+		<b>Skills:</b> <br>
+		Frameworks: <br>
+                {{ sk.frameworks }} <br>
+		Languages: <br>
+                {{ sk.languages}} <br>
+        </li>
+
+</ul>
