--- a/src/app/certificates/certificates.component.html
+++ b/src/app/certificates/certificates.component.html
@@ -1,1 +1,8 @@
-<p>certificates works!</p>
+<ul *ngFor="let cer of certificates;">
+        <li>
+		<b>Certificates:</b> <br>
+                {{ cer.certificateWeb }} <br>
+                {{ cer.certificateMobile}} <br>
+        </li>
+
+</ul>
