--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,33 @@
+<div class="contenedor-tabla">
+  <table border="1" class="tabla">
+    <tr>
+      <td colspan="2" class="titulo">VERSION 123</td>
+    </tr>
 
-<table border="1">
-  VERSION 123
-	<tr>
-		<td colspan="2">
-			<app-header></app-header>
-		</td>
-   	</tr>
-         <tr>
-            <td><app-work-experience></app-work-experience></td>
-            <td><app-skills></app-skills></td>
-         </tr>
-         
-         <tr>
-             <td><app-education></app-education></td>
-             <td><app-certificates></app-certificates></td>
-         </tr>
-
-         <tr>
-             <td><app-languages></app-languages>
-             <td><app-interests></app-interests>
-         </tr>
+    <tr>
+      <td colspan="2">
+        <app-header></app-header>
+      </td>
+    </tr>
+    <tr>
+      <td><app-work-experience></app-work-experience></td>
+      <td><app-skills></app-skills></td>
+    </tr>
 
 
+    <tr>
+      <td><app-education></app-education></td>
+      <td><app-certificates></app-certificates></td>
+    </tr>
+
+    <tr>
+      <td><app-languages></app-languages>
+      <td><app-interests></app-interests>
+    </tr>
 
 
 
-</table>
+
+
+  </table>
+</div>
