--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="contenedor-tabla">
   <table border="1" class="tabla">
     <tr>
-      <td colspan="2" class="titulo">VERSION 123</td>
+      <td colspan="2" class="titulo">VERSION Titulo</td>
     </tr>
 
     <tr>
