--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,19 @@
 <tr>
-        <td>
-                {{header.name}} <br>
-                {{header.goalLife}}
-        </td>
-        <td>
-                <img src="{{header.photoUrl}}" width='200' height='200'>
-        </td>
-        <td>
-                {{header.email}}<br>
-                {{header.phoneNumber}}<br>
-                {{header.location}}<br>
-                {{header.socialNetwork}}
-        </td>
+  <td colspan="2">
+    <div class="header-content">
+      <div class="left">
+        <p>{{header.name}}</p>
+        <p>{{header.goalLife}}</p>
+      </div>
+      <div class="center">
+        <img src="{{header.photoUrl}}" width="200" height="200">
+      </div>
+      <div class="right">
+        <p>{{header.email}}</p>
+        <p>{{header.phoneNumber}}</p>
+        <p>{{header.location}}</p>
+        <p>{{header.socialNetwork}}</p>
+      </div>
+    </div>
+  </td>
 </tr>
