--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -50,3 +50,12 @@
   font-family: 'Arial', sans-serif;
 
 }
+
+.contenedor-tabla {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: seashell;
+}
