--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,7 +26,9 @@
   max-width: 100%; /* Asegura que la imagen no se desborde */
   height: auto;
 }
-
+.tabla {
+   width: 100%;
+}
 /* Estilos de la tabla, ajustados para que todo se vea bien */
 .tabla td {
   padding: 10px;
@@ -53,7 +55,6 @@
 
 .contenedor-tabla {
   width: 100%;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
