--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,14 @@
 <tr>
   <td colspan="2">
-    <div class="header-content">
-      <div class="left">
+    <div class="header-info">
+      <div class="header-left">
         <p>{{header.name}}</p>
         <p>{{header.goalLife}}</p>
       </div>
-      <div class="center">
-        <img src="{{header.photoUrl}}" width="200" height="200">
+      <div class="header-photo">
+        <img src="{{header.photoUrl}}" alt="Foto" width="200" height="200">
       </div>
-      <div class="right">
+      <div class="header-right">
         <p>{{header.email}}</p>
         <p>{{header.phoneNumber}}</p>
         <p>{{header.location}}</p>
